# adaptive-rag

./: .env.example  .gitignore  README.md  pyproject.toml
backend/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
backend/data/: __init__.py  chat_repo.py  config.py  ingestion.py  vector_store.py
backend/orchestrator/: __init__.py  eval.py  graph.py  nodes.py  prompts.py  state.py
backend/tests/: conftest.py  test_api.py  test_data_layer.py  test_eval_pipeline.py  test_graph_routing.py  test_streamlit_smoke.py
frontend/: streamlit_app.py
infra/: docker-compose.yml
scripts/: run_tests.sh  start_backend.sh  start_frontend.sh
workflows/n8n/: doc_ingestion_workflow.json  nightly_eval_workflow.json  regression_alert_workflow.json
